side bar spacing fixed

--- a/app/assets/stylesheets/pophealth.css.scss
+++ b/app/assets/stylesheets/pophealth.css.scss
@@ -410,7 +410,7 @@ a {
   width: 285px;
   background-color: $providerReports;
   height: 100%;
-  vertical-align: middle;
+  vertical-align: top;
   color: black;
   padding: 0 5px 0 10px;
   border-right: 1px solid $borderColor;
